added bonus section file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flower-shop-website</title>
     <!-- font link start  -->
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Lato:wght@400;700;900&family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Freehand&family=Lato:wght@400;700;900&family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- font link end  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,7 +24,31 @@
         </section>
                     <!-- banner section html code end -->
     </header>
-    <main>
+    <main>          
+                   <!-- bonus part html code start  -->
+  <section class="bonus_part">
+    <div class="bonus_content">
+        <h1><span><i>FLOWERS</i></span></h1>
+        <h5><small>for your special occassion</small></h5>
+        <button class="btn">SHOP NOW</button>
+    </div>
+    <div class="bonus_image">
+        <div class="image_offer">
+        <img src="./Flower Asset/my-flower/flower2.jpg" alt="">
+        <button class="btn btn_bg">50% off</button>
+        </div>
+        <div class="image_offer">
+        <img src="./Flower Asset/my-flower/flower5.jpg" alt="">
+        <button class="btn btn_bg">30% off</button>
+        </div>
+         <div class="image_offer">
+        <img src="./Flower Asset/my-flower/flower4.jpg" alt="">
+        <button class="btn btn_bg">20% off</button>
+        </div>
+    </div>
+  </section>
+
+                   <!-- bonus part html code end  -->
                    <!-- feature part html code start  -->
    <section class="feature">
     <div class="feature_content">
