--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     </div>
     <div class="feature_image">
         <div class="image1">
-            <img src="/Flower Asset/pngwing 6.png" alt="image comming soon">
+            <img src="./Flower Asset/pngwing 6.png" alt="image comming soon">
             <h3>Pink Flower Tree</h3>
         </div>
         <div class="image2">
-            <img src="/Flower Asset/pngwing 5.png" alt="image comming soon">
+            <img src="./Flower Asset/pngwing 5.png" alt="image comming soon">
             <h3>Pink Flower Tree</h3>
         </div>
         <div class="image3">
-            <img src="/Flower Asset/pngwing 7.png" alt="image comming soon">
+            <img src="./Flower Asset/pngwing 7.png" alt="image comming soon">
             <h3>Pink Flower Tree</h3>
         </div>
     </div>
